# old-hovergroup

./: ApplicationList.md  OrganizationNotes.md  ProjectHome.md  Todo.md  index.html  params.json
Brooks/: iMatlab_test.m  (+1 more)
ivp-extend/brooks/src/simple_acomms_parser/: CMakeLists.txt
ivp-extend/eric/src/pDiscretePID/: CMakeLists.txt  DiscretePID.cpp  DiscretePIDMain.cpp
ivp-extend/josh/src/drawTriangle/: CMakeLists.txt
ivp-extend/josh/src/lib_timed-acomms/: CMakeLists.txt  TimedAcomms.cpp  TimedAcomms.h
ivp-extend/josh/src/pPursuitShore/: CMakeLists.txt  PursuitShore.cpp  PursuitShore.h  PursuitShore_Info.h  main.cpp  pPursuitShore.moos  readme.txt
ivp-extend/josh/src/pPursuitVehicle/: CMakeLists.txt  PursuitVehicle.cpp  PursuitVehicle.h  main.cpp  pPursuitVehicle.moos
ivp-extend/josh/src/pTDOATracker/: CMakeLists.txt  TDOATracker.cpp  TDOATracker.h  pTDOATracker.moos
ivp-extend/josh/src/pTargetRangeSensorSim/: CMakeLists.txt  TargetRangeSensorSim.cpp  TargetRangeSensorSim.h  TargetRangeSensorSimMain.cpp
ivp-extend/josh/src/pTulip26bit/: CMakeLists.txt  Tulip26bit.cpp  Tulip26bit.h  Tulip26bitMain.cpp  pTulip26bit_Follower.cpp  pTulip26bit_Leader.cpp
ivp-extend/josh/src/pWitsen/: CMakeLists.txt  Makefile  Witsen.cpp  Witsen.h  pWitsen.moos
ivp-extend/josh/src/tdoa_simple_parser/: CMakeLists.txt  tdoa_simple_parser.cpp
ivp-extend/mei/src/pRelayEnd/: CMakeLists.txt  RelayEnd.cpp  RelayEnd.h  pRelayEnd.moos
ivp-extend/mei/src/pRoundRobin/: CMakeLists.txt  RoundRobin.cpp  RoundRobin.h  RoundRobinMain.cpp
ivp-extend/raft/src/iEcaArm/: CMakeLists.txt  EcaArm.cpp  EcaArm.h  EcaArm_Info.cpp  EcaArm_Info.h  main.cpp
ivp-extend/remus/src/lib_RemusAMessages/: .cproject  .project  CMakeLists.txt  RemusAMessages.cpp
ivp-extend/remus/src/pAcommCmd13Bit/: AcommCmd13Bit.cpp  CMakeLists.txt
ivp-extend/remus/src/pAcommCmdTransmit/: AcommCmdTransmit.cpp  AcommCmdTransmit.h  CMakeLists.txt
ivp-extend/trunk/src/: CMakeLists.txt
ivp-extend/trunk/src/acommsParse/: acommsParse.cpp  acommsParse.h
ivp-extend/trunk/src/acomms_alog_parser/: CMakeLists.txt  acomms_alog_parser.cpp  acomms_alog_parser.h  acomms_alog_parser_main.cpp  acomms_alog_parser_output.cpp  flowchart.graphml
ivp-extend/trunk/src/alogParse/: CMakeLists.txt  alogParse.cpp  alogParse.h
ivp-extend/trunk/src/iAcommsDriver/: CMakeLists.txt  acomms_driver.cpp  acomms_driver.h  acomms_driverMain.cpp  iacomms_driver.moos
ivp-extend/trunk/src/iAltimeter/: iAltimeter.cpp  iAltimeter.h
ivp-extend/trunk/src/iAltimeter_cruzPro/: Altimeter_cruzPro.cpp  Altimeter_cruzPro.h  Makefile  cmake_install.cmake
ivp-extend/trunk/src/iGPS_Hover/: CMakeLists.txt  iGPS_Hover_nmea.cpp  main.cpp  simple_gps.cpp  simple_gps.h
ivp-extend/trunk/src/iHoverKayak/: CMakeLists.txt  kayak_driver.cpp  kayak_driver.h
ivp-extend/trunk/src/iIcarus/: CMakeLists.txt  icarus.cpp  icarus.h
ivp-extend/trunk/src/iKST/: KST.cpp  KST.h  KST_Info.cpp  KST_Info.h  main.cpp
ivp-extend/trunk/src/iNSFModem/: CMakeLists.txt  NSFModem.cpp  NSFModem.h  NSFModem_Info.h
ivp-extend/trunk/src/iOS5000_Hover/: CMakeLists.txt  iOS5000.cpp  iOS5000.h
ivp-extend/trunk/src/iOS5000_filtered/: CMakeLists.txt  CiOS5000_filtered.cpp
ivp-extend/trunk/src/iRTKNAVI/: RTKNAVI.cpp  RTKNAVI.h
ivp-extend/trunk/src/iacomms_driver/: CMakeLists.txt  acomms_driver.cpp  acomms_driver.h
ivp-extend/trunk/src/iacomms_driver_sim/: CMakeLists.txt  acomms_driver_sim.cpp  acomms_driver_sim.h  acomms_driver_simMain.cpp  iacomms_driver_sim.moos
ivp-extend/trunk/src/ikayak_driver/: kayak_driver.cpp
ivp-extend/trunk/src/kayak_interface/: CMakeLists.txt  kayak_interface.cpp  kayak_interface.h  main.cpp
ivp-extend/trunk/src/lib_HoverAcomms/: CMakeLists.txt  HoverAcomms.cpp  HoverAcomms.h
ivp-extend/trunk/src/lib_HoverGeometry/: CMakeLists.txt  HoverGeometry.h
ivp-extend/trunk/src/lib_JoshUtils/: CMakeLists.txt  JoshUtils.cpp  JoshUtils.h
ivp-extend/trunk/src/lib_acomms_messages/: CMakeLists.txt  acomms_messages.cpp  acomms_messages.h
ivp-extend/trunk/src/lib_behaviors/: BHV_Waypoint.cpp  BHV_Waypoint.h  BHV_Waypoint_Hover.cpp  CMakeLists.txt
ivp-extend/trunk/src/lib_behaviors-test/: BHV_Pulse.h
ivp-extend/trunk/src/lib_receive_info/: CMakeLists.txt  lib_receive_info.cpp  lib_receive_info.h
ivp-extend/trunk/src/pAckedCommsShoreside/: CMakeLists.txt  pAckedCommsShoreside.moos
ivp-extend/trunk/src/pAcommsScheduler/: AcommsScheduler.h  main.cpp  pAcommsScheduler.moos
ivp-extend/trunk/src/pAcommsSimulator/: AcommsSimulator.cpp  AcommsSimulator_Info.h  CMakeLists.txt
ivp-extend/trunk/src/pMarinePID_Hover/: MarinePID.cpp  MarinePID.h  PIDEngine.cpp  PIDEngine.h  ScalarPID.cpp  main.cpp
ivp-extend/trunk/src/pNavManager/: CMakeLists.txt  NavManager.cpp  NavManager.h  NavManager_Info.cpp  main.cpp  pNavManager.moos
ivp-extend/trunk/src/pProtoReportParser/: ProtoReportParser.cpp  ProtoReportParser.h  ProtoReportParser_Info.cpp  main.cpp
ivp-extend/trunk/src/pProtoReporter/: CMakeLists.txt  ProtoReporter.cpp  ProtoReporter.h  ProtoReporter_Info.cpp  ProtoReporter_Info.h
ivp-extend/trunk/src/pResourceMon/: ResourceMon.cpp  ResourceMon.h  ResourceMon_Info.cpp  ResourceMon_Info.h
ivp-extend/trunk/src/pScheduledTransmit/: ScheduledTransmit.cpp  ScheduledTransmitMain.cpp
ivp-extend/trunk/src/pSearchRelay/: CMakeLists.txt  SearchRelay.cpp  SearchRelay.h
ivp-extend/trunk/src/pWTStatusView/: CMakeLists.txt  WTStatusView.cpp  WTStatusView.h  WTStatusView_Info.h  main.cpp
ivp-extend/trunk/src/pacomms_timer/: CMakeLists.txt  acomms_timer.cpp  acomms_timer.h  cmake_install.cmake
ivp-extend/trunk/src/plossRate/: CMakeLists.txt  lossRate.cpp  lossRate.h
ivp-extend/trunk/src/protobuf/: CMakeLists.txt  ackedComms.proto  acommsSim.proto  dcclExample.proto  geometry.proto  reports.proto
ivp-extend/trunk/src/protobufExample/: CMakeLists.txt  protobufDCCLExample.cpp  protobufExample.cpp
ivp-extend/trunk/src/simple_acomms_parser/: CMakeLists.txt  simple_acomms_parser_main.cpp
ivp-extend/trunk/src/simple_gps/: CMakeLists.txt  simple_gps.cpp  simple_gps.h
(+1699 files in other folders)
